Improving collection page.

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -13,8 +13,8 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #6e7e85;
-$secondary : #b7cece;
-$accent    : #bbbac6;
+$secondary : #bbbac6;
+$accent    : #b7cece;
 
 $dark      : #1c0f13;
 
